fix #46 wrap in IonContent

--- a/src/pages/ChecklistPage.css
+++ b/src/pages/ChecklistPage.css
@@ -3,7 +3,7 @@ ion-button.button-disabled {
 }
 
 .focusImageModal_wrapper {
-    flex: 1 1 auto;
+    height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
